--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "scripts": {
     "build": "next build",
     "dev": "next dev --turbopack",
-    "start": "next start"
+    "start": "next start",
+    "lint": "eslint ."
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/forms": "^0.5.10",
     "autoprefixer": "10.4.20",
-    "bcrypt": "^5.1.1",
+    "bcrypt": "^6.0.0",
     "clsx": "^2.1.1",
     "next": "latest",
-    "next-auth": "5.0.0-beta.25",
+    "next-auth": "5.0.0-beta.30",
     "postcss": "8.5.1",
     "postgres": "^3.4.6",
     "react": "latest",
@@ -23,10 +24,14 @@
     "zod": "^3.25.17"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.1",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "eslint": "^9.39.1",
+    "eslint-config-next": "^16.0.3",
+    "typescript-eslint": "^8.47.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
